package controlador;

/**
 *
 * @author daniel
 */
public interface ISuscriptor {
    public void notificar();
}
